<resources>
    <string name="app_name">HabitTracker</string>
    <string name="action_settings">Settings</string>
    <string name="period_message">every %1$d days</string>
    <string name="count_message">%1$d times</string>
    <string name="creation_message">created %1$d/%2$d/%3$d</string>
    <string name="edit_text_name">name</string>
    <string name="edit_text_description">description</string>
    <string name="radio_button_bad">Bad</string>
    <string name="radio_button_good">Good</string>
    <string name="edit_text_count">count</string>
    <string name="edit_text_period">period</string>
    <string name="button_text_save">Save</string>
    <string name="about">about</string>
    <string name="home">home</string>
    <string name="bottom_sheet_text">Filter And Sort</string>
    <string name="find_string">Search</string>
    <string name="sortInfo">Sort by creation data</string>
    <string name="apikey">61860423-10fc-4711-8efb-2f037e382953</string>
    <string-array name="priorities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
