<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".HabitActivity"
        android:orientation="vertical"
        android:padding="20dp">

    <EditText
            android:id="@+id/nameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/edit_text_name"
            android:hint="@string/edit_text_name"
            android:inputType="textPersonName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/descriptionTextField"/>

    <EditText
            android:id="@+id/descriptionTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_description"
            android:inputType="textMultiLine"
            android:autofillHints="@string/edit_text_description"
            app:layout_constraintTop_toBottomOf="@id/nameTextField"
            app:layout_constraintBottom_toTopOf="@id/prioritySpinner"
            app:layout_constraintStart_toStartOf="@id/nameTextField"/>

    <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/priorities"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextField"
            app:layout_constraintBottom_toTopOf="@id/habitRadioGroup"
            app:layout_constraintStart_toStartOf="@id/nameTextField"/>

    <RadioGroup
            android:id="@+id/habitRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:checkedButton="@+id/habitTypeRadioButtonGood"
            app:layout_constraintTop_toBottomOf="@id/prioritySpinner"
            app:layout_constraintBottom_toTopOf="@id/countTextField"
            app:layout_constraintStart_toStartOf="@id/nameTextField">
        <RadioButton
                android:id="@+id/habitTypeRadioButtonBad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_bad"/>
        <RadioButton
                android:id="@+id/habitTypeRadioButtonGood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_good"/>
    </RadioGroup>

    <EditText
            android:id="@+id/countTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_count"
            android:inputType="number"
            android:autofillHints="@string/edit_text_count"
            app:layout_constraintTop_toBottomOf="@id/habitRadioGroup"
            app:layout_constraintBottom_toTopOf="@id/periodTextField"
            app:layout_constraintStart_toStartOf="@id/nameTextField"/>

    <EditText
            android:id="@+id/periodTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_period"
            android:inputType="number"
            android:autofillHints="@string/edit_text_period"
            app:layout_constraintTop_toBottomOf="@id/countTextField"
            app:layout_constraintStart_toStartOf="@id/nameTextField"/>

    <Button
            android:id="@+id/save_habit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_text_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/nameTextField"
            app:layout_constraintStart_toStartOf="@id/nameTextField"
            app:layout_constraintTop_toBottomOf="@+id/periodTextField"
            app:layout_constraintVertical_bias="1" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>